mdapiout/objects/Merchandising_Mix__c.object
<CustomObject>
    <label>Merchandise Mix</label>
    <nameField>
        <label>Merchandising Mix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Merchandise Mixes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Merchandising_Mixes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Confirmation_Number__c</fullName>
        <label>Confirmation Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Season__c</fullName>
        <label>Season</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Winter 2018</fullName>
                    <default>true</default>
                    <label>Winter 2018</label>
                </value>
                <value>
                    <fullName>Spring 2018</fullName>
                </value>
                <value>
                    <fullName>Summer 2018</fullName>
                </value>
                <value>
                    <fullName>Fall 2018</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted to Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Approved by Manufacturing</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>